--- a/platformio.ini
+++ b/platformio.ini
@@ -91,6 +91,8 @@ lib_deps =
 	robtillaart/ADS1X15@0.3.7
 	khoih-prog/FlashStorage_STM32@1.2.0
 	powerbroker2/SerialTransfer@^3.1.3
+	SPI@^1.0.0
+	adafruit/Adafruit seesaw Library@^1.7.4
 	https://github.com/denyssene/SimpleKalmanFilter.git
 	https://github.com/Zer0-bit/EasyNextionLibrary.git#1272a6de37f8aec60bd28941e2d96dc5f5613d0b
 	https://github.com/banoz/PSM.Library.git#feature/timer
