Caturra PCB support

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,6 +46,38 @@ build_flags =
 	-DLEGO_VALVE_RELAY
 	-DFORCE_PREDICTIVE_SCALES=1
 
+[env:caturra-stlink]
+extends = blackpill-core
+; This is a custom board based on the 64 pin package STM32F411re
+; with some basic hardware similar to the blackpill (48 pins)
+; We could've used the blackpill settings but some functions use the additional pins
+board = genericSTM32F411RE
+lib_deps =
+	${blackpill-core.lib_deps}
+	https://github.com/banoz/MAX6675-library.git@^1.1.0
+	https://github.com/metaquantus/STM32ADC.git
+	stm32duino/STM32duino RTC@^1.3.7
+build_flags =
+	${blackpill-core.build_flags}
+	-DCATURRA
+	; use the on-board boiler SSR
+	; undefine this to use an external 40A SSR instead, connected to R1
+	-DINT_RELAY
+	; crystal value, not present in generic definition but seems to be required somewhere
+	-DHSE_VALUE=25000000U
+	; the generic board defaults to serial2 instead of serial1 as the blackpill
+	-DUSE_RTC
+	-DENABLE_HWSERIAL1
+	-UENABLE_HWSERIAL2
+	; need to define some pins to enable I2C and SPI
+	-DPIN_WIRE_SDA=PB7
+	-DPIN_WIRE_SCL=PB6
+	-DPIN_SPI_SS=PB4
+	; SPI1 is connected to an extra 8MB flash memory IC
+	-DPIN_SPI_SS1=PB4
+	; we use SPI2 for the termocouple instead of SPI1
+	-DPIN_SPI_SS2=PB12
+
 [env:all-pcb-stlink]
 extends = blackpill-core
 lib_deps =
